# ChangeLog for dev-java/proxool
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/proxool/ChangeLog,v 1.6 2007/01/11 14:26:22 betelgeuse Exp $

*proxool-0.8.3-r1 (11 Jan 2007)

  11 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  +proxool-0.8.3-r1.ebuild:
  Migrated to generation 2. Does not use bundled jars any more.

  05 Jun 2005; Jan Brinkmann <luckyduck@gentoo.org> proxool-0.8.3.ebuild:
  Introduced support for the source useflag. Cosmetic changes.

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> proxool-0.8.3.ebuild:
  stable on amd64

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> proxool-0.8.3.ebuild:
  added missing jikes dependency. see #78819.

  27 Dec 2004; Lim Swee Tat <st_lim@gentoo.org> proxool-0.8.3.ebuild:
  Removed the version number from the jar

*proxool-0.8.3 (27 Dec 2004)

  27 Dec 2004; Lim Swee Tat <st_lim@gentoo.org> +metadata.xml,
  +proxool-0.8.3.ebuild:
  Initial commit for hibernate
