@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/proxool
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/proxool/ChangeLog,v 1.6 2007/01/11 14:26:22 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/proxool/ChangeLog,v 1.7 2007/01/11 21:15:31 betelgeuse Exp $
+
+  12 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
+  proxool-0.8.3-r1.ebuild:
+  Removed java5 use flag because the sources use enum and as such the ebuild
+  complecity does not justify the use flag. mx4j-core hard dep will be removed
+  when we one day have virtuals for java packages.
 
 *proxool-0.8.3-r1 (11 Jan 2007)
 
